Updated loading animation

--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,12 @@
   }
 
   .loader {
-    color: gray;
-    animation: spinner linear 1s infinite;
+    color: white;
+    animation-name: loading;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-delay: 1.5s;
+    animation-iteration-count: infinite;
   }
 
   @keyframes spinner {
@@ -55,6 +59,23 @@
 
     100% {
       transform: rotate(360deg);
+    }
+  }
+
+  @keyframes loading {
+    0% {
+      transform: rotate(0deg);
+      color: white;
+    }
+
+    50% {
+      transform: rotate(180deg);
+      color: gray;
+    }
+
+    100% {
+      transform: rotate(360deg);
+      color: gray;
     }
   }
 
